modules/networking/route_table_associations.tf
resource "aws_route_table_association" "public_a" {
  subnet_id      = aws_subnet.public-AZ-a.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_b" {
  subnet_id      = aws_subnet.public-AZ-b.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private-AZ-a.id
  route_table_id = aws_route_table.private_a.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private-AZ-b.id
  route_table_id = aws_route_table.private_b.id
}
